<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.parse.starter.TodoListActivity">
    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" android:showAsAction="never" />
    <item android:id="@+id/action_new"
        android:icon="@drawable/plus_50"
        android:title="@string/add_todo"
        android:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_sync"
        android:icon="@drawable/synchronize_50"
        android:showAsAction="ifRoom"
        android:title="@string/action_sync">
    </item>

    <item android:id="@+id/edit_todos"
        android:icon="@drawable/pencil_50"
        android:title="@string/edit_todos"
        android:showAsAction="ifRoom"/>
    <item
        android:id="@+id/goto_main_menu"
        android:showAsAction="never"
        android:title="Main Menu">
    </item>


    <item
        android:id="@+id/action_logout"
        android:showAsAction="never"
        android:title="@string/action_logout">
    </item>

    <item
        android:id="@+id/action_login"
        android:showAsAction="never"
        android:title="@string/action_login">
    </item>
</menu>
