<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.parse.starter.ViewNotification">
    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" android:showAsAction="never" />
    <item
        android:id="@+id/action_sync"
        android:icon="@drawable/synchronize_50"
        android:showAsAction="ifRoom"
        android:title="@string/action_sync">
    </item>
    <item
        android:id="@+id/action_logout"
        android:showAsAction="never"
        android:title="@string/action_logout">
    </item>
    <item
        android:id="@+id/goto_main_menu"
        android:showAsAction="never"
        android:title="Main Menu">
    </item>
</menu>
